--- a/app/templates/_private.html
+++ b/app/templates/_private.html
@@ -15,7 +15,7 @@
         <div class="dropdown">
             <button type="button" class="btn position-relative me-3" id="dropdownAlerts" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="bi bi-bell h4"></i>
-                {% set alerts_count=msg_count %}
+                {% set alerts_count=msg_alerts + invite_alerts %}
                 {% if alerts_count %}
                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                     {{ alerts_count }}
@@ -26,7 +26,7 @@
                 {{ dropdown_link(_("Unreaded messages"), 'envelope', url_for('message.browse'), msg_count) }}
                 {{ dropdown_link(_("Latest changes"), 'journal-check', '#', '12') }}
                 {{ dropdown_link(_("New locations"), 'geo-alt', url_for('admin.locations'), '12') }}
-                {{ dropdown_link(_("New invitations"), 'person', url_for('admin.invitations'), '12') }}
+                {{ dropdown_link(_("Invitations pending"), 'person', url_for('admin.invitations'), invite_alerts) }}
                 {{ dropdown_link(_("Failed logins"), 'exclamation-octagon', url_for('admin.logins'), '12') }}
             </div>
         </div>
