--- a/app/templates/email/invite.html
+++ b/app/templates/email/invite.html
@@ -1,5 +1,5 @@
 <p>Dear {{ invitation.name }},</p>
-<p>you were given a trust to access the HiddenPlaces by {{ invitation.invited_by.first_name }} {{ invitation.invited_by.last_name }}.</p>
+<p>you were given a trust to access the HiddenPlaces by {{ invitation.invited_by }}.</p>
 
 <p>
     To create a new account
