--- a/app/templates/message/show.html
+++ b/app/templates/message/show.html
@@ -9,7 +9,7 @@
     {% set user=thread.sender %}
 {% endif %}
 <div class="card content-card">
-    <div class="card-header">{{ user.first_name }} {{ user.last_name }}: {{ title }}</div>
+    <div class="card-header">{{ user }}: {{ title }}</div>
 
     <div class="list-group list-group-flush">
         <div class="list-group-item">
@@ -25,7 +25,7 @@
         {% for message in thread.messages %}
         <div class="list-group-item bg-{{ 'body' if message.user == current_user else 'light' }}">
             <div class="d-flex w-100 justify-content-between">
-                <strong>{{ message.user.first_name }} {{ message.user.last_name }}</strong>
+                <strong>{{ message.user }}</strong>
                 <small>{{ moment(message.timestamp).fromNow() }}</small>
             </div>
             <p class="mb-0">{{ message.message }}</p>
