--- a/app/templates/user/password.html
+++ b/app/templates/user/password.html
@@ -6,7 +6,7 @@
 <div class="d-flex justify-content-center">
     <div class="card">
         <h4 class="card-header text-center">
-            {{ _('Change password for %(first)s %(last)s', first=current_user.first_name, last=current_user.last_name) }}<br>
+            {{ _('Change password for %(user)s', user=current_user) }}<br>
         </h4>
         <div class="card-body">
             <form method="POST" action="" role="form">
