--- a/app/templates/email/password_reset.html
+++ b/app/templates/email/password_reset.html
@@ -1,4 +1,4 @@
-<p>Dear {{ user.first_name }} {{ user.last_name }},</p>
+<p>Dear {{ user }},</p>
 <p>
     To reset your password
     <a href="{{ url_for('user.reset_password', token=token, _external=True) }}">
