--- a/app/templates/location/_visits.html
+++ b/app/templates/location/_visits.html
@@ -16,7 +16,7 @@
                 <div class="d-flex w-100 justify-content-between">
                     <span>
                         <a href="{{ url_for('user.profile', id=visit.user_id) }}">
-                            <strong class="mb-1">{{ visit.user.first_name }} {{ visit.user.last_name }}</strong>
+                            <strong class="mb-1">{{ visit.user }}</strong>
                         </a>
                         <span class="control-hide">
                             {{ link_button('', url_for_return('location.visit_edit', visit_id=visit.id), 'pencil', 'warning', class='btn-sm') }}
